force-app/main/default/objects/BGR_Structures__c/BGR_Structures__c.object-meta.xml
<CustomObject>
    <label>BGR Structures</label>
    <nameField>
        <label>BGR Structures</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BGR Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>