force-app/main/default/objects/BGR_Structures__c/fields/Component_part__c.field-meta.xml
<CustomField>
    <fullName>Component_part__c</fullName>
    <label>Component part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>