force-app/main/default/objects/BGR_Structures__c/fields/Line_Item_No__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_No__c</fullName>
    <label>Line Item No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>