force-app/main/default/objects/BGR_Structures__c/fields/Radiography__c.field-meta.xml
<CustomField>
    <fullName>Radiography__c</fullName>
    <label>Radiography</label>
    <length>255</length>
    <type>Text</type>
</CustomField>