force-app/main/default/objects/BGR_Structures__c/fields/Scrap_Factor__c.field-meta.xml
<CustomField>
    <fullName>Scrap_Factor__c</fullName>
    <label>Scrap Factor(%)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>