force-app/main/default/objects/BGR_Structures__c/fields/SettingUL__c.field-meta.xml
<CustomField>
    <fullName>SettingUL__c</fullName>
    <label>SettingUL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>