force-app/main/default/objects/BGR_Structures__c/fields/Sourcing__c.field-meta.xml
<CustomField>
    <fullName>Sourcing__c</fullName>
    <label>Sourcing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>