force-app/main/default/objects/BGR_Structures__c/fields/SpringCode__c.field-meta.xml
<CustomField>
    <fullName>SpringCode__c</fullName>
    <label>SpringCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>